@@ -1,13 +1,84 @@
 # Application template recipe for the rails_apps_composer. Change the recipe here:
 # https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/deployment.rb
 
-case config['deployment']
-when 'capistrano3'
-  prefs[:deployment] = 'capistrano3'
+prefs[:deployment] = multiple_choice "Prepare for deployment?", [["no", "none"],
+    ["Heroku", "heroku"],
+    ["Capistrano", "capistrano3"]] unless prefs.has_key? :deployment
+
+if prefer :deployment, 'heroku'
+  say_wizard "installing gems for Heroku"
+  gsub_file 'Gemfile', /.*gem 'sqlite3'\n/, '' if prefer :database, 'sqlite'
+  add_gem 'sqlite3', group: [:development, :test] if prefer :database, 'sqlite'
+  add_gem 'pg', group: :production
+  add_gem 'rails_12factor', group: :production
+  stage_three do
+    say_wizard "recipe stage three"
+    say_wizard "precompiling assets for Heroku"
+    run 'RAILS_ENV=production rake assets:precompile'
+    say_wizard "creating app.json file for Heroku Button"
+    create_file 'app.json' do <<-TEXT
+{
+  "name": "#{app_name.humanize.titleize}",
+  "description": "Starter application generated by Rails Composer",
+  "logo": "https://avatars3.githubusercontent.com/u/788200",
+  "keywords": [
+    "Ruby #{RUBY_VERSION}",
+    "Rails #{Rails::VERSION::STRING}"
+  ],
+  "scripts": {},
+  "env": {
+    "RAILS_ENV": "production",
+    "ADMIN_EMAIL": {
+      "description": "The administrator's email address.",
+      "value": "user@example.com",
+      "required": true
+    },
+    "ADMIN_PASSWORD": {
+      "description": "The administrator's password.",
+      "value": "changeme",
+      "required": true
+    },
+    "GMAIL_USERNAME": {
+      "description": "Your Gmail address.",
+      "value": "user@example.com",
+      "required": false
+    },
+    "GMAIL_PASSWORD": {
+      "description": "Your Gmail password.",
+      "value": "changeme",
+      "required": false
+    },
+    "OWNER_EMAIL": {
+      "description": "Destination for messages sent from the app's contact form.",
+      "value": "user@example.com",
+      "required": false
+    },
+    "DOMAIN_NAME": {
+      "description": "Required for sending mail. Use the app name you've given.",
+      "value": "myapp.herokuapp.com",
+      "required": false
+    }
+  }
+}
+TEXT
+    end
+    if File.exists?('db/migrate')
+      gsub_file 'app.json', /"scripts": {/,
+          "\"scripts\": {\"postdeploy\": \"bundle exec rake db:migrate; bundle exec rake db:seed\""
+    end
+    gsub_file 'config/database.yml', /production:.*$\n.*$\n.*$/, ""
+    append_file 'config/database.yml' do <<-TEXT
+production:
+  <<: *default
+  adapter: postgresql
+  encoding: unicode
+TEXT
+    end
+  end
 end
 
 if prefer :deployment, 'capistrano3'
-  say_wizard "recipe adding capistrano gems"
+  say_wizard "installing gems for Capistrano"
   add_gem 'capistrano', '~> 3.0.1', group: :development
   add_gem 'capistrano-rvm', '~> 0.1.1', group: :development
   add_gem 'capistrano-bundler', group: :development
@@ -15,24 +86,23 @@ if prefer :deployment, 'capistrano3'
   add_gem 'capistrano-rails-console', group: :development
   stage_two do
     say_wizard "recipe stage two"
-    say_wizard 'recipe capistrano file'
+    say_wizard "installing Capistrano files"
     run 'bundle exec cap install'
   end
+end
+
+stage_three do
+  ### GIT ###
+  git :add => '-A' if prefer :git, true
+  git :commit => '-qm "rails_apps_composer: prepare for deployment"' if prefer :git, true
 end
 
 __END__
 
 name: deployment
-description: "Capistrano3-deployment - more options can be added later"
-author: zealot128
+description: "Prepare for deployment"
+author: RailsApps
 
-category: development
 requires: [setup]
 run_after: [init]
-args: -T
-
-config:
-  - deployment:
-      type: multiple_choice
-      prompt: Add a deployment mechanism?
-      choices: [["None", "none"], ["Capistrano3", "capistrano3"] ]
+category: development
