@@ -9,8 +9,8 @@ if prefer :apps4, 'learn-rails'
   prefs[:dashboard] = 'none'
   prefs[:ban_spiders] = false
   prefs[:better_errors] = true
-  prefs[:database] = 'default'
-  prefs[:deployment] = 'none'
+  prefs[:database] = 'sqlite'
+  prefs[:deployment] = 'heroku'
   prefs[:devise_modules] = false
   prefs[:dev_webserver] = 'webrick'
   prefs[:email] = 'gmail'
