@@ -6,7 +6,6 @@ if prefer :apps4, 'rails-devise'
   prefs[:authorization] = false
   prefs[:dashboard] = 'none'
   prefs[:better_errors] = true
-  prefs[:deployment] = 'none'
   prefs[:git] = true
   prefs[:local_env_file] = false
   prefs[:pry] = false
