@@ -6,8 +6,7 @@ if prefer :apps4, 'rails-foundation'
   prefs[:authorization] = false
   prefs[:dashboard] = 'none'
   prefs[:better_errors] = true
-  prefs[:database] = 'default'
-  prefs[:deployment] = 'none'
+  prefs[:database] = 'sqlite'
   prefs[:devise_modules] = false
   prefs[:email] = 'none'
   prefs[:form_builder] = false
