@@ -6,7 +6,6 @@ if prefer :apps4, 'rails-omniauth'
   prefs[:authorization] = 'none'
   prefs[:dashboard] = 'none'
   prefs[:better_errors] = true
-  prefs[:deployment] = 'none'
   prefs[:email] = 'none'
   prefs[:git] = true
   prefs[:local_env_file] = false
