@@ -104,6 +104,15 @@ TEXT
   end
 
   create_file 'README.md', "#{app_name.humanize.titleize}\n================\n\n"
+
+  if prefer :deployment, 'heroku'
+    append_to_file 'README.md' do <<-TEXT
+[![Deploy to Heroku](https://www.herokucdn.com/deploy/button.png)](https://heroku.com/deploy)
+
+TEXT
+    end
+  end
+
   append_to_file 'README.md' do <<-TEXT
 This application was generated with the [rails_apps_composer](https://github.com/RailsApps/rails_apps_composer) gem
 provided by the [RailsApps Project](http://railsapps.github.io/).
